# c-term-timer

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
scripts/: read_wav_to_bytes.py
src/: clock.c  clock.h  common.c  common.h  duration-parser.c  duration-parser.h  main.c  play_sound.c  play_sound.h  raw_term.c  raw_term.h
test/: clock.test.c  common.h  duration-parser.test.c
